# forum-test-project

forum/: .gitignore
forum/backend/: app.py  pyproject.toml
forum/backend/core/auth/: dependencies.py  jwt.py
forum/backend/core/db_connection/: database.py
forum/backend/src/config/: settings.py
forum/backend/src/models/: __init__.py  comments.py  posts.py  user.py
forum/backend/src/routes/: auth.py  comments.py  posts.py  users.py
forum/backend/src/schemas/: comment.py  posts.py  user.py
forum/backend/src/services/: comment_service.py  post_service.py  user_service.py
forum/backend/tests/: test_auth_no_db.py
